package CouchePresentation;


public abstract class InterfaceUtilisateur{
    
    public boolean connexion(String usrname, String pwd){
        return true;
    }

}
